fixed overlapping ui issue with margin

--- a/feb-2019/white_mushrooms/style.css
+++ b/feb-2019/white_mushrooms/style.css
@@ -3167,10 +3167,17 @@ i.currency-inr {
 }
 
 @media (min-width:768px) and (max-width:991px) {
-.header .top {
-    float: right;
-    margin-right: 0px;
-    margin-top: -25px !important;
-    margin-bottom: 25px !important;
+	.header .top {
+		float: right;
+		margin-right: 0px;
+		margin-top: -25px !important;
+		margin-bottom: 25px !important;
+	}
 }
+
+@media (min-width:320px) and (max-width:768px) {
+	/* change by gopal */
+	.breadcrumb {
+		margin-top: 20px;
+	}
 }
